jdl: changed more attributes to 'required'

--- a/.jhipster/AppUser.json
+++ b/.jhipster/AppUser.json
@@ -7,11 +7,13 @@
   "fields": [
     {
       "fieldName": "numRoutes",
-      "fieldType": "Integer"
+      "fieldType": "Integer",
+      "fieldValidateRules": ["required"]
     },
     {
       "fieldName": "numReviews",
-      "fieldType": "Integer"
+      "fieldType": "Integer",
+      "fieldValidateRules": ["required"]
     }
   ],
   "fluentMethods": true,
