--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
               "src/main/webapp/content/scss/vendor.scss",
               "src/main/webapp/content/scss/global.scss",
               "./node_modules/leaflet/dist/leaflet.css",
-              "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"
+              "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css",
+              "./node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css"
             ],
             "scripts": []
           },
