--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,13 +85,13 @@ deploy-dev:
     #save CI pipeline variables ready for transfer to the deployment server
     - echo CI_REGISTRY_USER=${CI_REGISTRY_USER} CI_REGISTRY_PASSWORD=${CI_REGISTRY_PASSWORD} CI_REGISTRY_IMAGE=${CI_REGISTRY_IMAGE} CI_COMMIT_TAG=${CI_COMMIT_TAG} CI_REGISTRY=${CI_REGISTRY} URL=${URL} EMAIL=${GITLAB_USER_EMAIL} ACME=${ACME} > src/main/docker/.env
     #delete previous ~/team-project/ folder if it is there and run (install-docker.sh) on the deployment server if it is needed
-    - ssh teamproject2023-team "(rm -rf ~/team-project || true ) && (which docker || sh team-project/install-docker.sh)"
+    - ssh teamproject2023-team15 "(rm -rf ~/team-project || true ) && (which docker || sh team-project/install-docker.sh)"
     #transfer src/main/docker/ to the deployment server
     - scp -r src/main/docker/ teamproject2023-team:~/team-project
     #run (install-app.sh) on the deployment server
-    - ssh teamproject2023-team "sh team-project/install-app.sh"
+    - ssh teamproject2023-team15 "sh team-project/install-app.sh"
   script:
-    - ssh teamproject2023-team "docker compose -f ~/team-project/app.yml up -d && docker system prune --force --filter 'until=24h'"
+    - ssh teamproject2023-team15 "docker compose -f ~/team-project/app.yml up -d && docker system prune --force --filter 'until=24h'"
 
 deploy-prod:
   image: alpine:latest
@@ -115,4 +115,4 @@ deploy-prod:
     - chmod og= $RSA
     - apk update && apk add openssh-client sshpass
   script:
-    - ssh teamproject2023-team "docker compose -f ~/team-project/prd.yml up -d && docker system prune --force --filter 'until=24h'"
+    - ssh teamproject2023-team15 "docker compose -f ~/team-project/prd.yml up -d && docker system prune --force --filter 'until=24h'"
