flip many-to-many relationships in jdl

--- a/.jhipster/AppUser.json
+++ b/.jhipster/AppUser.json
@@ -45,7 +45,7 @@
       "otherEntityField": "name",
       "otherEntityName": "tag",
       "otherEntityRelationshipName": "appUser",
-      "ownerSide": false,
+      "ownerSide": true,
       "relationshipName": "tag",
       "relationshipType": "many-to-many"
     }
