--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "bootstrap": "5.2.0",
     "bootswatch": "5.2.0",
     "dayjs": "1.11.5",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
@@ -107,6 +108,7 @@
     "@angular/compiler-cli": "14.2.0",
     "@angular/service-worker": "14.2.0",
     "@types/jest": "28.1.8",
+    "@types/jwt-decode": "^3.1.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "16.11.56",
     "@typescript-eslint/eslint-plugin": "5.36.1",
