--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Fri Mar 22 02:30:40 GMT 2024
+#Tue Apr 16 13:51:12 BST 2024
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/teamproject|teamproject
 webSSL=false
 webAllowOthers=true
