--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Tue Apr 16 13:51:12 BST 2024
+#Wed Apr 17 18:40:08 GMT+08:00 2024
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/teamproject|teamproject
 webSSL=false
 webAllowOthers=true
